Change Founder details

--- a/index.html
+++ b/index.html
@@ -1492,16 +1492,16 @@
     <!-- Team/Founder Section -->
     <section class="team" id="team">
         <div class="container">
-            <h2 class="section-title">Meet the Founder</h2>
+            <h2 class="section-title">Message from the Founder</h2>
             <div class="founder-card">
                 <div class="founder-info" style="max-width: 800px; margin: 0 auto;">
                     <h3>AI Innovation Leader</h3>
                     <p class="founder-title">Founder & Chief AI Architect</p>
                     <p class="founder-bio">
-                        With over a decade of experience in artificial intelligence and machine learning, I founded ASAP.ai TECHLABS with a vision to democratize AI for businesses of all sizes. My expertise spans deep learning, natural language processing, computer vision, and generative AI.
+                        With over a decade of experience in artificial intelligence and machine learning, we founded ASAP.ai TECHLABS with a vision to democratize AI for businesses of all sizes. Our expertise spans deep learning, natural language processing, computer vision, and generative AI.
                     </p>
                     <p class="founder-bio">
-                        Having led AI initiatives at Fortune 500 companies and innovative startups, I bring a unique blend of technical depth and business acumen. My mission is to help organizations harness the transformative power of AI to solve complex challenges and unlock new opportunities.
+                        Having led AI initiatives at innovative startups, we bring a unique blend of technical depth and business acumen. Our mission is to help organizations harness the transformative power of AI to solve complex challenges and unlock new opportunities.
                     </p>
                 </div>
             </div>
