Adding logo to title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASAP.ai TECHLABS - AI-First Solutions for Modern Businesses</title>
+    <title>ASAP.ai TECHLABS</title>
+	<link rel="icon" type="image/x-icon" href="logo_title.ico">
     <style>
         * {
             margin: 0;
